buttons added and looking good but wrong drop down

--- a/app.css
+++ b/app.css
@@ -28,3 +28,15 @@ body {
     font-size: 10rem;
     padding-right: 10vw;
 }
+
+#btnwrapper {
+    display: flex;
+    position: absolute;
+    flex-direction: column-reverse;
+    align-items: center;
+    margin-top: 55vh;
+}
+
+.dropdown {
+    padding-top: 10px;
+}
